# claude-desktop-buddy-bridge

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml
extras/: dev.cdbb.daemon.plist
src/cdbb/: bridge.py  cli.py  hook.py
tests/: test_bridge.py
